# PvZTVTouchScript

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/scripts/: ConstEnums.lua  corex.lua
app/src/main/java/com/fairy/tv/: CrashHandler.java  FairyNative.java  MyApplication.java  Packet.java  PacketDispatcher.java
app/src/main/java/com/fairy/tv/floating/: FloatingController.java  FloatingLauncher.java
app/src/main/java/com/fairy/tv/floating/weight/: FloatingDraggableAreas.java
app/src/main/java/com/fairy/tv/floating/widget/: FloatingDraggableAreas.java
app/src/main/java/com/fairy/tv/script/: ExcuteResult.java  FairyScript.java  LogBufferItemAdapter.java  LogMessage.java  ScriptConsole.java  ScriptConsoleLauncher.java  ScriptManager.java  ScriptManagerActivity.java  ScriptManifest.java
app/src/main/java/com/fairy/tv/util/: DefaultActivityLifecycleCallbacks.java  Jsons.java  LimitedList.java  LiveData.java  Pixels.java
app/src/main/java/com/transmension/mobile/: AudioOutput.java  EnhanceActivity.java  KeyboardSetActivity.java  NativeActivity.java
app/src/main/jni/: CMakeLists.txt  Main.cpp
app/src/main/jni/Fairy/: Def.h  FUtils.cpp  FUtils.h  JNInteraction.cpp  JNInteraction.h
app/src/main/jni/Fairy/Script/: Core.cpp  Core.h  LuaUtils.h  ScriptInterface.cpp  ScriptInterface.h
app/src/main/jni/HookGame/: Enums.h  HookAddr.h  HookGame.cpp  SpecialConstraints.h
app/src/main/jni/HookGame/Board/: Board.cpp
app/src/main/jni/HookGame/Challenge/: Challenge.cpp
app/src/main/jni/HookGame/LawnApp/: LawnApp.cpp
app/src/main/jni/HookGame/MainMenu/: MainMenu.cpp
app/src/main/jni/HookGame/Misc/: Misc.h
app/src/main/jni/HookGame/StoreScreen/: StoreScreen.cpp
app/src/main/jni/Includes/: Utils.h
app/src/main/jni/Symbols/: SymbolTable.h  Symbols.h
app/src/main/res/layout/: crash_handler.xml  floating_console.xml  script_entry_item.xml  script_manager.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
